--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgilePhD | Welcome</title>
+    <title>crodr52</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="https://s3.amazonaws.com/agilephd/styles/main.css">
@@ -15,7 +15,7 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text agilephd">AgilePhD</li>
+          <li class="menu-text agilephd">crodr52</li>
         </ul>
       </div>
       <div class="top-bar-right">
@@ -38,11 +38,9 @@
           src="https://s3.amazonaws.com/agilephd/project_management.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Agile Project Management</h2>
+        <h2>Still reading? Well, I'm surprised someone is still on here.</h2>
         <p>
-          As an experienced agile project manager, AgilePhD is the niche provider
-          clients seek out when they are looking to implement business-enhancing,
-          agile PMO services that improve project and portfolio performance.
+          You were supposed to leave a long time ago. What are you still doing here? 
         </p>
 
       </div>
@@ -50,27 +48,21 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Project Management</h3>
+        <h3>Alright, its your time that you're waisting, not mine.</h3>
         <p>
-          Speed is what companies want as they adopt Agile. Traditional
-          plan-driven methodologies like Waterfall make a lot of up front
-          assumptions and leave no flexibility to adapt to the changing
-          needs of the customer.
+          Could have left a long time ago, but noooooooo.
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Software Development</h3>
+        <h3>Hope you're happy.</h3>
         <p>
-          It's all about that MVP (minimally viable product) and getting
-          it in front of your customers.  I love building technology products.  
+          You could be on the beach enjoying a pina colada right now, but instead you're reading this.  
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Cloud Services</h3>
+        <h3>Well, it was nice chatting.</h3>
         <p>
-          As an early adopter several cloud technologies, AgilePhD can
-          help you develop a scalable solutions allowing you to focus
-          on your core business.
+          Bye!!
         </p>
       </div>
     </div>
